# src/models/category.model.ts
@@ -4,13 +4,15 @@ import * as Yup from "yup";
 
 const Schema = mongoose.Schema;
 
-export const categoryDAO = Yup.object({
+export const CATEGORY_MODEL_NAME = "Category";
+
+export const categoryDTO = Yup.object({
   name: Yup.string().required(),
   description: Yup.string().required(),
   icon: Yup.string().required(),
 });
 
-export type Category = Yup.InferType<typeof categoryDAO>;
+export type Category = Yup.InferType<typeof categoryDTO>;
 
 const CategorySchema = new Schema<Category>(
   {
@@ -30,5 +32,5 @@ const CategorySchema = new Schema<Category>(
   { timestamps: true }
 ).index({ name: "text", description: "text" });
 
-const CategoryModel = mongoose.model("Category", CategorySchema);
+const CategoryModel = mongoose.model(CATEGORY_MODEL_NAME, CategorySchema);
 export default CategoryModel;
