# src/routes/api.ts
@@ -10,6 +10,7 @@ import regionController from "../controllers/region.controller";
 import eventController from "../controllers/event.controller";
 import ticketController from "../controllers/ticket.controller";
 import bannerController from "../controllers/banner.controller";
+import orderController from "../controllers/order.controller";
 
 const router = express.Router();
 
@@ -376,14 +377,117 @@ router.delete(
     #swagger.tags = ['Tickets']
     #swagger.security = [{
       "bearerAuth": []
-    }]
+    }]  
   */
 );
+
 router.get(
   "/tickets/:event/event",
   ticketController.findTicketsByEvent
   /**
     #swagger.tags = ['Tickets']
+  */
+);
+
+router.post(
+  "/orders",
+  [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+  orderController.create
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateOrderRequest"
+      }
+    }
+  */
+);
+
+router.get(
+  "/orders",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.findAll
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.get(
+  "/orders/:orderId",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
+  orderController.findOne
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.get(
+  "/orders-history",
+  [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+  orderController.findAllByMember
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.put(
+  "/orders/:orderId/completed",
+  [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+  orderController.complete
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.put(
+  "/orders/:orderId/pending",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.pending
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.put(
+  "/orders/:orderId/cancel",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.cancelled
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+);
+
+router.delete(
+  "/orders/:orderId",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.remove
+  /**
+    #swagger.tags = ['Orders']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
   */
 );
 
